--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # local tex files
+
 *.log
 *.aux
 *.out
@@ -8,7 +9,10 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea
 .DS_Store
+IO-Fouriers.iml
+FouriersPhone.iml
 /build
 /captures
 .externalNativeBuild
